# page_object_model

./: README.md  conftest.py  pyproject.toml  test_login_page.py  test_main_page.py  test_product_page.py
pages/: base_page.py  basket_page.py  locators.py  login_page.py  main_page.py  product_page.py
